--- a/MemBus.Tests/packages.config
+++ b/MemBus.Tests/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Moq" version="4.0.10827" />
-  <package id="NUnit" version="2.6.0.12054" />
-  <package id="Rx-Main" version="1.0.11226" />
+  <package id="NUnit" version="2.6.1" targetFramework="net40" />
+  <package id="Rx-Core" version="2.0.20823" targetFramework="net40" />
+  <package id="Rx-Interfaces" version="2.0.20823" targetFramework="net40" />
+  <package id="Rx-Linq" version="2.0.20823" targetFramework="net40" />
+  <package id="Rx-Main" version="2.0.20823" targetFramework="net40" />
+  <package id="Rx-PlatformServices" version="2.0.20823" targetFramework="net40" />
 </packages>
