--- a/MemBus.Pcl.Tests/MemBus.Pcl.Tests.csproj
+++ b/MemBus.Pcl.Tests/MemBus.Pcl.Tests.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Help\AssertExtensions.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Help\Messages.cs" />
     <Compile Include="Help\MockSubscription.cs" />
     <Compile Include="Help\NamedSubscription.cs" />
+    <Compile Include="Help\PublishPipelineTester.cs" />
     <Compile Include="Help\RxBasedFooObservable.cs" />
     <Compile Include="Help\SampleClass.cs" />
     <Compile Include="Help\SimpleResolver.cs" />
@@ -73,7 +75,17 @@
     <Compile Include="Help\SomeHandler.cs" />
     <Compile Include="Help\SubscriptionThatFakesHandles.cs" />
     <Compile Include="Help\TestShaper.cs" />
+    <Compile Include="Integration\Integration_scenario_interaction_with_subscriber.cs" />
+    <Compile Include="Integration\Unexpected_disposal_of_subscriptions.cs" />
+    <Compile Include="Integration\When_using_disposable_buses.cs" />
+    <Compile Include="Integration\When_using_ioc_support.cs" />
+    <Compile Include="Integration\When_using_the_bus.cs" />
+    <Compile Include="Integration\When_using_the_bus_in_the_ui.cs" />
+    <Compile Include="Integration\When_using_the_bus_with_flexible_subscriptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Publishing\Using_publishing_methods.cs" />
+    <Compile Include="Publishing\Using_Publish_Pipeline.cs" />
+    <Compile Include="Rx\When_MemBus_is_used_as_Observable.cs" />
     <Compile Include="Subscribing\Using_Composite_Subscription.cs" />
     <Compile Include="Subscribing\Using_disposable_method_subscription.cs" />
     <Compile Include="Subscribing\Using_predicate_based_subscribing.cs" />
