--- a/MemBus.Pcl.Tests/MemBus.Pcl.Tests.csproj
+++ b/MemBus.Pcl.Tests/MemBus.Pcl.Tests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Integration\When_using_the_bus_in_the_ui.cs" />
     <Compile Include="Integration\When_using_the_bus_with_flexible_subscriptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Publishing\Awaitable_Publish.cs" />
     <Compile Include="Publishing\Using_publishing_methods.cs" />
     <Compile Include="Publishing\Using_Publish_Pipeline.cs" />
     <Compile Include="Rx\Observable_As_Publish.cs" />
