Refactoring towards new FlexibleMessageEndpoints

--- a/MemBus.Pcl.Tests/MemBus.Pcl.Tests.csproj
+++ b/MemBus.Pcl.Tests/MemBus.Pcl.Tests.csproj
@@ -59,7 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Help\AssertExtensions.cs" />
-    <Compile Include="Help\FakePublisher.cs" />
+    <Compile Include="Help\FakeBus.cs" />
     <Compile Include="Help\Helpers.cs" />
     <Compile Include="Help\IClassicIHandleStuffI.cs" />
     <Compile Include="Help\ItfNonGenericForHandles.cs" />
@@ -88,9 +88,11 @@
     <Compile Include="Publishing\Using_Publish_Pipeline.cs" />
     <Compile Include="Rx\Observable_As_Publish.cs" />
     <Compile Include="Rx\When_MemBus_is_used_as_Observable.cs" />
+    <Compile Include="Subscribing\FlexibleSubscribingIntegrationContext.cs" />
+    <Compile Include="Subscribing\FSA_Reacting_To_Messages_And_Sending.cs" />
     <Compile Include="Subscribing\Using_Composite_Subscription.cs" />
     <Compile Include="Subscribing\Using_disposable_method_subscription.cs" />
-    <Compile Include="Subscribing\Using_predicate_based_subscribing.cs" />
+    <Compile Include="Subscribing\FSA_Using_Predicate_Based_Subscribing.cs" />
     <Compile Include="Subscribing\Using_SubscriptionAdapter_Service.cs" />
     <Compile Include="Subscribing\Using_subscription_shapes.cs" />
     <Compile Include="Subscribing\When_Resolving_Subscriptions.cs" />
