Ordering of subscribing vs. observables
Needed so that a message sink can already receive messages from an
observable that is provided in the same subscription "transaction"

--- a/MemBus.Pcl.Tests/MemBus.Pcl.Tests.csproj
+++ b/MemBus.Pcl.Tests/MemBus.Pcl.Tests.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Subscribing\FlexibleSubscribingIntegrationContext.cs" />
     <Compile Include="Subscribing\FSA_Consuming_Observables.cs" />
     <Compile Include="Subscribing\FSA_Reacting_To_Messages_And_Sending.cs" />
+    <Compile Include="Subscribing\FSA_Using_Interface_Based_Subscribing.cs" />
     <Compile Include="Subscribing\Using_Composite_Subscription.cs" />
     <Compile Include="Subscribing\Using_disposable_method_subscription.cs" />
     <Compile Include="Subscribing\FSA_Using_Predicate_Based_Subscribing.cs" />
