Scenario for CompositeSub perf metrics

--- a/MemBus.Tests.Performance/MemBus.Tests.Performance.csproj
+++ b/MemBus.Tests.Performance/MemBus.Tests.Performance.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompositeSubscriptionPerformanceTest.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="IScenario.cs" />
     <Compile Include="Program.cs" />
