--- a/Nuget/MemBus/MemBus.nuspec
+++ b/Nuget/MemBus/MemBus.nuspec
@@ -2,11 +2,11 @@
 <package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>MemBus</id>
-    <version>3.0.0</version>
+    <version>3.0.1</version>
     <authors>Frank Quednau</authors>
     <owners>Frank Quednau</owners>
     <description>In-memory publish-subscribe bus with pluggable subscription and publishing pipeline, first-class support of Observables, contravariant messaging and resolution of handlers through pluggable IOC.</description> 
-    <releaseNotes>Now a pcl library, requires .NET 4.5. New awaitable publishing, new flexible subscription capabilities around subscribing</releaseNotes>
+    <releaseNotes>pcl library now also targets WP8, by using ReadWriteLockSlim instead of ConcurrentDictionary</releaseNotes>
     <projectUrl>http://github.com/flq/MemBus</projectUrl>
     <licenseUrl>http://www.opensource.org/licenses/apache2.0</licenseUrl>
     <iconUrl>http://realfiction.net/files/bus.png</iconUrl>
