--- a/Nuget/build.xml
+++ b/Nuget/build.xml
@@ -4,7 +4,7 @@
     <Configuration>Release</Configuration>
 	  <SlnDir>..\</SlnDir>
     <NugetDir>MemBus</NugetDir>
-    <LibDir>$(NugetDir)\lib\portable-windows8+net45</LibDir>
+    <LibDir>$(NugetDir)\lib\portable-windows8+net45+wp8</LibDir>
   </PropertyGroup>
   
   <Target Name="Prepare">
