--- a/MemBus/MemBus.csproj
+++ b/MemBus/MemBus.csproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <Description>Pub/Sub in-memory with all parts configurable</Description>
     <VersionPrefix>4.0.1-rc</VersionPrefix>
     <Authors>Frank Quednau</Authors>
-    <TargetFrameworks>netstandard1.6;net45;net46</TargetFrameworks>
+    <TargetFrameworks>net45;net46;netstandard1.6;netstandard2.0</TargetFrameworks>
     <AssemblyName>MemBus</AssemblyName>
     <PackageId>MemBus</PackageId>
     <PackageTags>publish;subscribe;bus;messaging</PackageTags>
@@ -24,10 +23,12 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Version>4.0.1</Version>
     <DocumentationFile>bin\Debug\$(TargetFramework)\MemBus.xml</DocumentationFile>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE;DEBUG;NETSTANDARD1_6</DefineConstants>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+  </ItemGroup>
 </Project>
